# veb

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  README.rst  noxfile.py  perftest.py  pyproject.toml  setup.py  test-requirements.txt  tests.py  tox.ini  veb.py
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: ci.yml
veb/: __init__.py  _core.py  core.py
veb/tests/: test_core.py
